log/build_2026-03-21_23-32-54/my_robot_pkg/stderr.log
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:44:5: error: ‘SparkMax’ does not name a type
   44 |     SparkMax motor1;
      |     ^~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:45:5: error: ‘SparkMax’ does not name a type
   45 |     SparkMax motor2;
      |     ^~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:46:5: error: ‘SparkMax’ does not name a type
   46 |     SparkMax motor3;
      |     ^~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:47:5: error: ‘SparkMax’ does not name a type
   47 |     SparkMax motor4;
      |     ^~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp: In constructor ‘MotorDriver::MotorDriver()’:
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:12:7: error: class ‘MotorDriver’ does not have any field named ‘motor1’
   12 |       motor1("can0", 1),
      |       ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:13:7: error: class ‘MotorDriver’ does not have any field named ‘motor2’
   13 |       motor2("can0", 2),
      |       ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:14:7: error: class ‘MotorDriver’ does not have any field named ‘motor3’
   14 |       motor3("can0", 3),
      |       ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:15:7: error: class ‘MotorDriver’ does not have any field named ‘motor4’
   15 |       motor4("can0", 4)
      |       ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:22:9: error: ‘motor1’ was not declared in this scope
   22 |         motor1.SetMotorType(MotorType::kBrushless);
      |         ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:22:29: error: ‘MotorType’ has not been declared
   22 |         motor1.SetMotorType(MotorType::kBrushless);
      |                             ^~~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:23:9: error: ‘motor2’ was not declared in this scope
   23 |         motor2.SetMotorType(MotorType::kBrushless);
      |         ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:23:29: error: ‘MotorType’ has not been declared
   23 |         motor2.SetMotorType(MotorType::kBrushless);
      |                             ^~~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:24:9: error: ‘motor3’ was not declared in this scope
   24 |         motor3.SetMotorType(MotorType::kBrushless);
      |         ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:24:29: error: ‘MotorType’ has not been declared
   24 |         motor3.SetMotorType(MotorType::kBrushless);
      |                             ^~~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:25:9: error: ‘motor4’ was not declared in this scope
   25 |         motor4.SetMotorType(MotorType::kBrushless);
      |         ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:25:29: error: ‘MotorType’ has not been declared
   25 |         motor4.SetMotorType(MotorType::kBrushless);
      |                             ^~~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:27:28: error: ‘IdleMode’ has not been declared
   27 |         motor1.SetIdleMode(IdleMode::kBrake);
      |                            ^~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:28:28: error: ‘IdleMode’ has not been declared
   28 |         motor2.SetIdleMode(IdleMode::kBrake);
      |                            ^~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:29:28: error: ‘IdleMode’ has not been declared
   29 |         motor3.SetIdleMode(IdleMode::kBrake);
      |                            ^~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:30:28: error: ‘IdleMode’ has not been declared
   30 |         motor4.SetIdleMode(IdleMode::kBrake);
      |                            ^~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:32:30: error: ‘SensorType’ has not been declared
   32 |         motor1.SetSensorType(SensorType::kHallSensor);
      |                              ^~~~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:33:30: error: ‘SensorType’ has not been declared
   33 |         motor2.SetSensorType(SensorType::kHallSensor);
      |                              ^~~~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:34:30: error: ‘SensorType’ has not been declared
   34 |         motor3.SetSensorType(SensorType::kHallSensor);
      |                              ^~~~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:35:30: error: ‘SensorType’ has not been declared
   35 |         motor4.SetSensorType(SensorType::kHallSensor);
      |                              ^~~~~~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp: In member function ‘void MotorDriver::cmd_callback(std_msgs::msg::String_<std::allocator<void> >::SharedPtr)’:
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:54:13: error: ‘motor1’ was not declared in this scope
   54 |             motor1.SetDutyCycle(0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:55:13: error: ‘motor2’ was not declared in this scope
   55 |             motor2.SetDutyCycle(0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:56:13: error: ‘motor3’ was not declared in this scope
   56 |             motor3.SetDutyCycle(0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:57:13: error: ‘motor4’ was not declared in this scope
   57 |             motor4.SetDutyCycle(0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:59:13: error: ‘motor1’ was not declared in this scope
   59 |             motor1.SetDutyCycle(-0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:60:13: error: ‘motor2’ was not declared in this scope
   60 |             motor2.SetDutyCycle(-0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:61:13: error: ‘motor3’ was not declared in this scope
   61 |             motor3.SetDutyCycle(0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:62:13: error: ‘motor4’ was not declared in this scope
   62 |             motor4.SetDutyCycle(0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:64:13: error: ‘motor1’ was not declared in this scope
   64 |             motor1.SetDutyCycle(-0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:65:13: error: ‘motor2’ was not declared in this scope
   65 |             motor2.SetDutyCycle(-0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:66:13: error: ‘motor3’ was not declared in this scope
   66 |             motor3.SetDutyCycle(-0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:67:13: error: ‘motor4’ was not declared in this scope
   67 |             motor4.SetDutyCycle(-0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:69:13: error: ‘motor1’ was not declared in this scope
   69 |             motor1.SetDutyCycle(0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:70:13: error: ‘motor2’ was not declared in this scope
   70 |             motor2.SetDutyCycle(0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:71:13: error: ‘motor3’ was not declared in this scope
   71 |             motor3.SetDutyCycle(-0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:72:13: error: ‘motor4’ was not declared in this scope
   72 |             motor4.SetDutyCycle(-0.5);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:74:13: error: ‘motor1’ was not declared in this scope
   74 |             motor1.SetDutyCycle(0.0);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:75:13: error: ‘motor2’ was not declared in this scope
   75 |             motor2.SetDutyCycle(0.0);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:76:13: error: ‘motor3’ was not declared in this scope
   76 |             motor3.SetDutyCycle(0.0);
      |             ^~~~~~
/home/zebby/ws1/src/my_robot_pkg/src/motor_driver.cpp:77:13: error: ‘motor4’ was not declared in this scope
   77 |             motor4.SetDutyCycle(0.0);
      |             ^~~~~~
gmake[2]: *** [CMakeFiles/motor_driver.dir/build.make:79: CMakeFiles/motor_driver.dir/src/motor_driver.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:140: CMakeFiles/motor_driver.dir/all] Error 2
gmake: *** [Makefile:149: all] Error 2
